# sim

backend/: Cargo.toml  scripts.sh
backend/bindings/: all.ts
backend/src/: main.rs
backend/src/ants/: ant.rs  constants.rs  coordinates.rs  food.rs  mod.rs  snapshot.rs  tests.rs  world.rs
backend/src/ants/evaluation/: mod.rs
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/lib/: WorldView.svelte
frontend/src/routes/: +page.svelte  +page.ts
frontend/src/routes/error/: +page.svelte
