[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.13.0"
actix-ws = "0.4.0"
chrono = { version = "0.4.44", features = ["serde"] }
futures-util = "0.3.32"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
ts-rs = "12.0.1"
